added new flow in old one

--- a/sdi-candidate-sso/src/main/app/mule-deploy.properties
+++ b/sdi-candidate-sso/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Wed May 10 13:47:33 EDT 2017
+#Wed May 24 21:18:01 IST 2017
 redeployment.enabled=true
 encoding=UTF-8
+config.resources=genericcsvimport.xml,sdi-candiate-sso.xml
 domain=default
-config.resources=sdi-candiate-sso.xml
