--- a/sdi-candidate-sso/src/main/resources/JCTaleoUpdater.properties
+++ b/sdi-candidate-sso/src/main/resources/JCTaleoUpdater.properties
@@ -23,7 +23,7 @@ CandSSOIDUpdate_ResultEmailTemplate=jctaleo_updater/email_templates/CandSSOIDUpd
 CandSetInternalFlag=Active
 CandSetInternalFlag_TCCBatchRowNeeded=true
 CandSetInternalFlag_SQLDataSource=PeopleSoft
-CandSetInternalFlag_SQL=select ee.alter_emplid as Identifier, jc.hrs_person_id as CandidateID, 'TRUE' as Internal, ee.alter_emplid as SSOID, ee.alter_emplid as EmployeeNumber from ps_c1_employees ee, ps_c1_jobconnect jc where ee.emplid = jc.emplid and ee.empl_status = 'A' and ee.rehire_dt >= 'LRD_Goes_Here' and length(ee.alter_emplid) = 7 and jc.process_instance = (select max(jc2.process_instance) from ps_c1_jobconnect jc2 where jc.emplid = jc2.emplid) order by 1
+CandSetInternalFlag_SQL=select ee.alter_emplid as Identifier, jc.hrs_person_id as CandidateID, 'TRUE' as Internal, ee.alter_emplid as SSOID, ee.alter_emplid as EmployeeNumber from ps_c1_employees ee, ps_c1_jobconnect jc where ee.emplid = jc.emplid and ee.empl_status = 'A' and ee.rehire_dt >= to_date('LRD_Goes_Here', 'dd-mon-yyyy HH24:MI:SS') and length(ee.alter_emplid) = 7 and jc.process_instance = (select max(jc2.process_instance) from ps_c1_jobconnect jc2 where jc.emplid = jc2.emplid) order by 1
 CandSetInternalFlag_CSVHeader=Identifier,CandidateID,Internal,SSOID,EmployeeNumber
 CandSetInternalFlag_CSVOutputDir=staging/TSE/request/
 CandSetInternalFlag_ArchiveDirectory=staging/JCTaleo_Updater/
